dynamix/force-app/main/default/objects/Booking__c/fields/Registration_TAT_Report__c.field-meta.xml
<CustomField>
    <fullName>Registration_TAT_Report__c</fullName>
    <formula>Registration_Date__c - Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>