dynamix/force-app/main/default/objects/Booking__c/fields/Reinitiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Reinitiated_Date__c</fullName>
    <label>Reinitiated Date</label>
    <type>Date</type>
</CustomField>