dynamix/force-app/main/default/objects/Booking__c/fields/Related_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Property__c</fullName>
    <formula>Related_Suggested_Property__r.Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Property</label>
    <type>Text</type>
</CustomField>