dynamix/force-app/main/default/objects/Booking__c/fields/Related_Suggested_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Suggested_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Suggested Property</label>
    <referenceTo>Suggested_Property__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>