dynamix/force-app/main/default/objects/Booking__c/fields/Remaining_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Refund_Amount__c</fullName>
    <formula>Refund_Amount__c -  Return_Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>