dynamix/force-app/main/default/objects/Booking__c/fields/ReOpen_Date__c.field-meta.xml
<CustomField>
    <fullName>ReOpen_Date__c</fullName>
    <label>ReOpen Date</label>
    <type>Date</type>
</CustomField>