dynamix/force-app/main/default/objects/Booking__c/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <formula>Project_Name__r.RERA_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA Number</label>
    <type>Text</type>
</CustomField>