dynamix/force-app/main/default/objects/Booking__c/fields/Return_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Return_Refund_Amount__c</fullName>
    <label>Return Refund Amount</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Refund_Type__c</field>
        <operation>equals</operation>
        <value>Debit</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>