dynamix/force-app/main/default/objects/Booking__c/fields/RM_Contact_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>RM_Contact_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Contact (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>