dynamix/force-app/main/default/objects/Booking__c/fields/RM_Name_Formulla__c.field-meta.xml
<CustomField>
    <fullName>RM_Name_Formulla__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <label>RM Name Formulla</label>
    <type>Text</type>
</CustomField>