dynamix/force-app/main/default/objects/Booking__c/fields/Rm_Name_Non_Critical__c.field-meta.xml
<CustomField>
    <fullName>Rm_Name_Non_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rm Name (Non-Critical)</label>
    <type>Checkbox</type>
</CustomField>