dynamix/force-app/main/default/objects/Booking__c/fields/ROC_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>ROC_Uploaded_Date__c</fullName>
    <label>ROC Uploaded Date</label>
    <type>Date</type>
</CustomField>