dynamix/force-app/main/default/objects/Booking__c/fields/SAP_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cancellation_Status__c</fullName>
    <label>SAP Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>