dynamix/force-app/main/default/objects/Booking__c/fields/Sap_Code__c.field-meta.xml
<CustomField>
    <fullName>Sap_Code__c</fullName>
    <label>Sap Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>