dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Ageing__c.field-meta.xml
<CustomField>
    <fullName>SDR_Ageing__c</fullName>
    <formula>IF(IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &lt; 30,&quot;&lt; 1 Month&quot;,
 IF(IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &gt;= 30 &amp;&amp; IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &lt;60,&quot;1 to 2 Months&quot;,
  IF(IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &gt;= 60 &amp;&amp; IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &lt;120,&quot;2 to 4 Months&quot;,
    IF(IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &gt;= 120 &amp;&amp; IF(NOT(ISBLANK( SDR_Completed_Date__c )), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), TRUNC(TODAY()- SDR_Inititated_Date__c,0) ) &lt; 180,&quot;4 to 6 Months&quot;,&quot;&quot;)
  )
 )
)</formula>
    <label>SDR Ageing</label>
    <type>Text</type>
</CustomField>