dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Agent__c.field-meta.xml
<CustomField>
    <fullName>SDR_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project_Name__c</field>
            <operation>equals</operation>
            <valueField>SDR_Agent__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SDR_Agent__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>