dynamix/force-app/main/default/objects/Booking__c/fields/SDR_amount_by_Dynamix__c.field-meta.xml
<CustomField>
    <fullName>SDR_amount_by_Dynamix__c</fullName>
    <inlineHelpText>SDR amount by paid by Dynamix</inlineHelpText>
    <label>SDR amount by Dynamix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>