dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Challan_Received_for_RM__c.field-meta.xml
<CustomField>
    <fullName>SDR_Challan_Received_for_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Challan Received for RM</label>
    <type>Checkbox</type>
</CustomField>