dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_Completed_Date__c</fullName>
    <label>SDR Completed Date</label>
    <type>Date</type>
</CustomField>