dynamix/force-app/main/default/objects/Booking__c/fields/SDR_delay_reason__c.field-meta.xml
<CustomField>
    <fullName>SDR_delay_reason__c</fullName>
    <inlineHelpText>SDR Delay reson</inlineHelpText>
    <label>SDR delay reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Indemnity_Form__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Booking</fullName>
                <default>true</default>
                <label>New Booking</label>
            </value>
            <value>
                <fullName>Customer Delaying</fullName>
            </value>
            <value>
                <fullName>Customer Availability Issue</fullName>
            </value>
            <value>
                <fullName>Awaiting Loan Sanction</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility Issue (short sanction)</fullName>
            </value>
            <value>
                <fullName>Fund Issue</fullName>
            </value>
            <value>
                <fullName>Self-Cancellation</fullName>
            </value>
            <value>
                <fullName>Propose Cancellation</fullName>
            </value>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Awaiting Management Decision</fullName>
            </value>
            <value>
                <fullName>Not Reachable / Responding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Indemnity form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>