dynamix/force-app/main/default/objects/Booking__c/fields/SDR_email_reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>SDR_email_reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SDR Email Reminder Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>