dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Inititated_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_Inititated_Date__c</fullName>
    <label>SDR Inititated Date</label>
    <type>Date</type>
</CustomField>