dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_Letter_Sent_Date__c</fullName>
    <label>SDR Letter Sent Date</label>
    <type>Date</type>
</CustomField>