dynamix/force-app/main/default/objects/Booking__c/fields/SDR_Paid__c.field-meta.xml
<CustomField>
    <fullName>SDR_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Paid</label>
    <type>Checkbox</type>
</CustomField>