dynamix/force-app/main/default/objects/Booking__c/fields/SDR_TAT_Report__c.field-meta.xml
<CustomField>
    <fullName>SDR_TAT_Report__c</fullName>
    <formula>IF(NOT(ISBLANK(SDR_Completed_Date__c)), TRUNC(SDR_Completed_Date__c - SDR_Inititated_Date__c ,0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR TAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>