dynamix/force-app/main/default/objects/Booking__c/fields/Secondary_Loan_Details__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Loan_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Loan Details</label>
    <referenceTo>Bank_Loan_Details__c</referenceTo>
    <relationshipLabel>Booking (Bank Loan Details)</relationshipLabel>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>