dynamix/force-app/main/default/objects/Booking__c/fields/Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax__c</fullName>
    <label>Service Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>