dynamix/force-app/main/default/objects/Booking__c/fields/Shared_SDR_Letter__c.field-meta.xml
<CustomField>
    <fullName>Shared_SDR_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared SDR Letter</label>
    <type>Checkbox</type>
</CustomField>