dynamix/force-app/main/default/objects/Booking__c/fields/Signature_on_No_claims_certificate__c.field-meta.xml
<CustomField>
    <fullName>Signature_on_No_claims_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature on No claims certificate</label>
    <type>Checkbox</type>
</CustomField>