dynamix/force-app/main/default/objects/Booking__c/fields/Signature_on_Society_Formation_Document__c.field-meta.xml
<CustomField>
    <fullName>Signature_on_Society_Formation_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature on Society Formation Document</label>
    <type>Checkbox</type>
</CustomField>