dynamix/force-app/main/default/objects/Booking__c/fields/Snag_Desnag__c.field-meta.xml
<CustomField>
    <fullName>Snag_Desnag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snag/Desnag</label>
    <type>Checkbox</type>
</CustomField>