dynamix/force-app/main/default/objects/Booking__c/fields/SO_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Created_Date__c</fullName>
    <label>SO Created Date</label>
    <type>Date</type>
</CustomField>