dynamix/force-app/main/default/objects/Booking__c/fields/Source_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Booking__c</fullName>
    <formula>TEXT( Related_Opportunity__r.Walk_in_Source__c )</formula>
    <label>Source of Booking</label>
    <type>Text</type>
</CustomField>