dynamix/force-app/main/default/objects/Booking__c/fields/Source_of_Finance__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Finance__c</fullName>
    <label>Source of Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Funded</fullName>
            </value>
            <value>
                <fullName>Loan from Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>