dynamix/force-app/main/default/objects/Booking__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>