dynamix/force-app/main/default/objects/Booking__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Possession/Handover</fullName>
            </value>
            <value>
                <fullName>Snag/Desnag by Client</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Cancellation Initiated</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled – Refund Pending</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled – Refund Ready</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled -- Refund Done</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Handover</fullName>
                <isActive>false</isActive>
                <label>Handover</label>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Possession Letter</fullName>
                <isActive>false</isActive>
                <label>Possession Letter</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Sanction</fullName>
                <isActive>false</isActive>
                <label>Sanction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>