dynamix/force-app/main/default/objects/Booking__c/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <summarizedField>Price_Details__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Price_Details__c.Charge_Group__c</field>
        <operation>contains</operation>
        <value>Stamp Duty</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Details__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>