dynamix/force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Challan_No__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Challan_No__c</fullName>
    <label>Stamp Duty Challan No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>