dynamix/force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Date__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Date__c</fullName>
    <label>Stamp Duty Date</label>
    <type>Date</type>
</CustomField>