dynamix/force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Pending__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Pending__c</fullName>
    <formula>Stamp_Duty__c - Payment_Received_Stamp_Duty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stamp Duty (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>