dynamix/force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Status__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Status__c</fullName>
    <label>Stamp Duty Payable By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamix</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Regency</fullName>
                <isActive>false</isActive>
                <label>Regency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>