dynamix/force-app/main/default/objects/Booking__c/fields/Sub_Booking_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Booking_Offer__c</fullName>
    <label>Sub Booking Offer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>