dynamix/force-app/main/default/objects/Booking__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Total_Billed_Amount__c - Total_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Due Amount - Total Amount Received(UNIT+TDS+GST)</inlineHelpText>
    <label>Total Out Standing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>