dynamix/force-app/main/default/objects/Booking__c/fields/Total_Amount_Dues__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Dues__c</fullName>
    <inlineHelpText>Total Amount Due(MIlestone amount+TDS Without GST)</inlineHelpText>
    <label>Total Amount Due</label>
    <summarizedField>Payment_Milestones__c.Milestone_Amount1__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestones__c.Milestone_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>