dynamix/force-app/main/default/objects/Booking__c/fields/Total_Amount_Received_in_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received_in_Percentage__c</fullName>
    <formula>(Total_Amount_Received__c / Agreement_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Received in Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>