dynamix/force-app/main/default/objects/Booking__c/fields/Total_Amount_Received_TDS__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received_TDS__c</fullName>
    <label>Total Amount Received TDS</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Category__c</field>
        <operation>equals</operation>
        <value>TDS</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>