dynamix/force-app/main/default/objects/Booking__c/fields/Total_Amount_Received_Unit_Cost_TDS__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received_Unit_Cost_TDS__c</fullName>
    <formula>Payment_Received_Agreement__c + Total_Amount_Received_TDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Received (Unit Cost + TDS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>