dynamix/force-app/main/default/objects/Booking__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <formula>Active_Milestones__c *  Agreement_Value_incl_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Due Amount (UNIT+TDS+GST)</inlineHelpText>
    <label>Total Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>