dynamix/force-app/main/default/objects/Booking__c/fields/Total_Brokrage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokrage_Amount__c</fullName>
    <formula>Add_Broker_Additional_Benefit__c +((Agreement_Value__c * Brokerage_Percentage__c)) +(((Agreement_Value__c *Brokerage_Percentage__c))* 0.18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokrage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>