dynamix/force-app/main/default/objects/Booking__c/fields/Total_consolidated_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_consolidated_amount__c</fullName>
    <label>Total Consolidated Payment Amount</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>