dynamix/force-app/main/default/objects/Booking__c/fields/Total_GST_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Due__c</fullName>
    <inlineHelpText>GST Due (Against Milestone)</inlineHelpText>
    <label>Total GST Due</label>
    <summarizedField>Payment_Milestones__c.GST_Amount1__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestones__c.Milestone_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>