dynamix/force-app/main/default/objects/Booking__c/fields/Total_interest_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_interest_amount__c</fullName>
    <inlineHelpText>Interest Amount without GST</inlineHelpText>
    <label>Total Interest amount</label>
    <summarizedField>Payment_Milestones__c.Interest_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>