dynamix/force-app/main/default/objects/Booking__c/fields/Total_Interest_on_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_on_GST__c</fullName>
    <label>Total Interest on GST</label>
    <summarizedField>Payment_Milestones__c.Interest_Amount_GST__c</summarizedField>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>