dynamix/force-app/main/default/objects/Booking__c/fields/Total_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone__c</fullName>
    <label>Total Milestone %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>