dynamix/force-app/main/default/objects/Booking__c/fields/Total_Milestone_Due_Only_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Due_Only_Unit_Cost__c</fullName>
    <label>Total Milestone Due (Only Unit Cost )</label>
    <summarizedField>Payment_Milestones__c.Unit_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestones__c.Name</field>
        <operation>notEqual</operation>
        <value>Possession/Handover(Other) Charge</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestones__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>