dynamix/force-app/main/default/objects/Booking__c/fields/Total_Received_Amount_Excluding_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Amount_Excluding_GST__c</fullName>
    <formula>Total_Amount_Received__c  -  Approved_Payment_Received_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Received Amount (Excluding GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>